Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48968

Segfault browsing directories (QTreeView + QFileSystemModel)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.0
    • 5.4.1
    • Widgets: Itemviews
    • None
    • Kubuntu 15.04 KDE 4.14 / Xubuntu 15.04 XFCE 4.12 / Manjaro 15.09 XFCE 4.12
    • qtbase:8b9346c7404287b4c546b49c23f24ccbef0f8b6e

    Description

      With the simple code in the attachment, I get a Segfault every time I browse a directory where I have writing's rights.
      It only happens under a Linux system (at least with those listed that I checked) and works perfectly with Windows.
      I did not test it under Mac OS X.

      Attachments

        1. backtrace
          6 kB
        2. main.cpp
          0.6 kB
        3. osx-stacktrace.txt
          52 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dedietri Gabriel de Dietrich (drgvond)
            xavi-b xavi-b
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes