tests/auto/widgets/itemviews/qabstractitemview/tst_qabstractitemview.cpp
@@ -27,6 +27,7 @@ DECL|function|GeometriesTestView
 DECL|function|MyAbstractItemDelegate
 DECL|function|QTBUG31411_noSelection
 DECL|function|QTBUG39324_settingSameInstanceOfIndexWidget
+DECL|function|QTBUG48968_reentrant_updateEditorGeometries
 DECL|function|QTBUG6407_extendedSelection
 DECL|function|QTBUG6753_selectOnSelection
 DECL|function|StateChangeDelegate
